# fleet

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING
docs/: CMakeLists.txt  fleet.7  fleet.7.pandoc  flt.3  flt.3.pandoc  flt_after.3  flt_after.3.pandoc  flt_channel.3  flt_channel.3.pandoc  flt_detach.3  flt_detach.3.pandoc  flt_fleet.3  flt_fleet.3.pandoc  flt_local.3  flt_local.3.pandoc  flt_pool.3  flt_pool.3.pandoc  flt_run.3  flt_run.3.pandoc  flt_task.3  flt_task.3.pandoc  flt_task_group.3  flt_task_group.3.pandoc
docs/links/: flt_bulk_task_new.3  flt_channel_send_then.3  flt_fleet_set_context_count.3  flt_local_done_f.3  flt_pool_ctx_get_index.3  flt_reattach.3  flt_run_after_group.3  flt_run_migratable.3
examples/: CMakeLists.txt  concurrent-batched.c  concurrent-unbatched.c  examples.h  fleet-examples.c  run-example.c  sequential-return.c  sequential-run.c
include/: fleet.h
src/: CMakeLists.txt  fleet.pc.in
src/include/fleet/: dllist.h  internal.h  task.h  threads.h  timing.h
src/libfleet/: after.c  bounded-queue.c  dllist.c  fleet.c  local.c  pool.c  scounter.c  single-threaded.c
tests/: CMakeLists.txt  fleet-test.c  helpers.h  test-concurrent-batched.c  test-concurrent-unbatched.c  test-concurrent.c  test-sequential-return.c  test-sequential-run.c
